[tool.poetry]
name = "dms"
version = "0.1.0"
description = ""
authors = ["JP"]

[tool.poetry.dependencies]
python = "^3.12"
falcon = "^3.1.3"
uvicorn = "^0.30.6"
aiofiles = "^24.1.0"
httpx = "^0.27.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
        
